Add teacher assignment to class-subject
