# app/controllers/api/school_class_subjects_controller.rb
@@ -1,9 +1,10 @@
 module Api
   class SchoolClassSubjectsController < ApplicationController
+    before_action :authenticate_user!
+    before_action :authorize_admin!, only: %i[add remove update]
     before_action :set_school_class, only: %i[index_for_class add remove]
     before_action :set_subject, only: %i[index_for_subject add remove]
-    before_action :authenticate_user!
-    before_action :authorize_admin!, only: %i[add remove]
+    before_action :set_assignment, only: %i[update]
 
     def index_for_class
       render json: @school_class.subjects.select(:id, :name)
@@ -32,6 +33,19 @@ module Api
       end
     end
 
+    def update
+      teacher_id = params.require(:teacher_id)
+
+      user = User.find_by(id: teacher_id)
+      unless user&.role == 'teacher'
+        render json: { error: 'Provided user is not a teacher' },
+               status: :unprocessable_entity and return
+      end
+
+      @assignment.update!(teacher: user)
+      render json: { message: 'Teacher updated successfully' }, status: :ok
+    end
+
     private
 
     def set_school_class
@@ -40,6 +54,10 @@ module Api
 
     def set_subject
       @subject = Subject.find(params[:subject_id])
+    end
+
+    def set_assignment
+      @assignment = SchoolClassSubject.find(params[:id])
     end
 
     def authorize_admin!
